# zeteo-cli

./: .commitlintrc.cjs  .env.example  .gitignore  BACKEND_SETUP.md  CONTRIBUTING.md  Cargo.toml  ENV_GUIDE.md  IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PROVIDER_SETUP.md  README  README.md  RELEASE.md  REPL_SHOWCASE.md  TESTING_REPORT.md  TEST_SUMMARY.md  TUI_MCP_IMPLEMENTATION.md  config.example.json  config.json  demo.tape  release.toml
.github/: dependabot.yml
.github/workflows/: auto-tag.yml  ci.yml  lint-commits.yml  publish.yml  release.yml  version-bump.yml
assets/: README.md
docs/: CHANGELOG.md  RELEASE.md
examples/: README.md  REPL_GUIDE.md  backend_usage.sh
hooks/: pre-commit
scripts/: setup-hooks.sh
src/: cache.rs  lib.rs  main.rs  repl.rs  retry.rs  session.rs  tui.rs
src/backends/: elasticsearch.rs  kibana.rs  mod.rs  openobserve.rs
src/config/: mod.rs
src/logs/: mod.rs
src/mcp/: mod.rs
src/providers/: azure.rs  google.rs  mod.rs  ollama.rs  openai.rs  vertex.rs
src/tools/: mod.rs
tests/: README.md  mcp_mock_tests.rs  openobserve_integration_tests.rs
