[package]
name = "zeteo-cli"
version = "0.1.0"
edition = "2021"
authors = ["Zeteo Contributors"]
description = "A Rust-based CLI AI agent with OTEL log exploration capabilities"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
colored = "2.1"
dialoguer = "0.11"
config = "0.14"
dirs = "5.0"
async-trait = "0.1"
