[package]
name = "zeteo-cli"
version = "0.1.0"
edition = "2021"
authors = ["Zeteo Contributors"]
description = "A Rust-based CLI AI agent with OTEL log exploration capabilities"
license = "MIT"
repository = "https://github.com/adarshba/zeteo-cli"
keywords = ["cli", "ai", "otel", "logs", "gemini"]
categories = ["command-line-utilities"]

[lib]
name = "zeteo_cli"
path = "src/lib.rs"

[[bin]]
name = "zeteo"
path = "src/main.rs"

[dependencies]
# CLI Framework
clap = { version = "4.5", features = ["derive", "env", "cargo"] }
clap_complete = "4.5"

# Async Runtime
tokio = { version = "1.40", features = ["full"] }

# HTTP Client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
anyhow = "1.0"

# UI & Display
colored = "2.1"
dialoguer = "0.11"
ratatui = "0.27"
crossterm = "0.27"

# Configuration
config = "0.14"
dirs = "5.0"

# Async Trait
async-trait = "0.1"

# Time
chrono = "0.4"

# Environment Variables
dotenv = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

